added support for updating ACL on endpoint

--- a/lib/locales/en-us.json
+++ b/lib/locales/en-us.json
@@ -1310,6 +1310,7 @@
     "log query; takes precedence over --type, --source, --continuationToken, and --top": "log query; takes precedence over --type, --source, --continuationToken, and --top",
     "name identifer": "name identifer",
     "number of instances in basic or standard mode": "number of instances in basic or standard mode",
+    "the acl file provided is malformed":"the acl file provided is malformed",
     "one of the optional parameter --endpoint-name, --lb-port, --vm-port or --endpoint-protocol is required": "one of the optional parameter --endpoint-name, --lb-port, --vm-port or --endpoint-protocol is required",
     "only consider VM for this DNS name": "only consider VM for this DNS name",
     "only consider VMs for this DNS name": "only consider VMs for this DNS name",
@@ -1480,6 +1481,7 @@
     "the new git username": "the new git username",
     "the new load balancer port": "the new load balancer port",
     "the new local port port": "the new local port port",
+    "the json file containing the EndpointAcl definition":"the json file containing the EndpointAcl definition",
     "the new transport layer protocol for port (tcp or udp)": "the new transport layer protocol for port (tcp or udp)",
     "the number of data nodes to use for the cluster": "the number of data nodes to use for the cluster",
     "the number of instances": "the number of instances",
